--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer.</h3>
-	  <h3>I love all things computer science and maths.</h3>
+	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer/SDET.</h3>
+	  <!-- <h3>I graduated with a Bachelors in Computer Science at CSUF</h3> -->
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://jekyllt.github.io/vitae">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3>For more check out my academic &amp; professional <a href="{{ site.baseurl }}static/res/Resume_Adrian_Salazar.pdf">resume</a>.</h3>
+	  <h3>Contact me at <a href="http://linkedin.com/in/{{ site.linkedin }}">@{{ site.linkedin }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
 </section>
