--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: home
 <section id="about">
 	<div class="container">
 	  <div class="avatar">
-		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
+		<img class="img-circle" src="/static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
 	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer/SDET.</h3>
 	  <!-- <h3>I graduated with a Bachelors in Computer Science at CSUF</h3> -->
-	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="{{ site.baseurl }}static/res/Resume_Adrian_Salazar.pdf">resume</a>.</h3>
+	  <h3>Have a look at some of my working <a href="/projects.html"> projects</a>.</h3>
+	  <h3>For more check out my academic &amp; professional <a href="/static/res/Resume_Adrian_Salazar.pdf">resume</a>.</h3>
 	  <h3>Contact me at <a href="http://linkedin.com/in/{{ site.linkedin }}">@{{ site.linkedin }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
 	</div>
